--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "xarray>=2025.7.1",
 ]
 
+[project.optional-dependencies]
+spectracles = ["spectracles>=0.5.1"]
+
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
